feat: add id to cse7766

--- a/athom-smart-plug.yaml
+++ b/athom-smart-plug.yaml
@@ -156,6 +156,7 @@ sensor:
     device_class: ""
 
   - platform: cse7766
+    id: cse7766_sensor
     current:
       name: "Current"
       filters:
